client/src/index.css
.source {
  color: red;
  text-transform: lowercase;
}
.header {
  font-weight: bold;
  margin-top: 0.7em;
  color: #000;
}
.header.top {
  margin-top: 0em;
}
ul {
  display: inline-block;
}
.ingredient-list li {
  color: #555;
  list-style-type: none;
}
.recipe {
  text-align: right;
}
.recipe-list {
  display: inline-block;
  vertical-align: top;
}
.recipe-list label {
  text-align: center;
}
.ingredient-list {
  margin: 0;
  padding: 0;
  padding-left: 1.5em;
  display: inline-block;
}
.recipe-instructions {
  display: inline-block;
  vertical-align: top;
  margin-top: 0;
}
input[type=checkbox] {
  position: relative;
  left: 1em;
}
body {
  font-family: monospace
}

